--- a/config/database.yml
+++ b/config/database.yml
@@ -20,20 +20,20 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  port: 5432
   host: localhost
+  port: 5432
   username: postgres
   password: 12345678
-  
+
 development:
   <<: *default
-  database: api_devise_token_auth_development
+  database: demo_devise_token_auth_api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: api_devise_token_auth
+  #username: demo_devise_token_auth_api
 
   # The password associated with the postgres role (username).
   #password:
@@ -61,7 +61,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: api_devise_token_auth_test
+  database: demo_devise_token_auth_api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: api_devise_token_auth_production
-  username: api_devise_token_auth
-  password: <%= ENV['API_DEVISE_TOKEN_AUTH_DATABASE_PASSWORD'] %>
+  database: demo_devise_token_auth_api_production
+  username: demo_devise_token_auth_api
+  password: <%= ENV['DEMO_DEVISE_TOKEN_AUTH_API_DATABASE_PASSWORD'] %>
